force-app/main/default/objects/Position__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Lookup</type>
    <referenceTo>Geography__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
</CustomField>