force-app/main/default/objects/Position__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <label>Assigned User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
</CustomField>