force-app/main/default/objects/Position__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <label>Current User</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Position_Current_User</relationshipName>
    <type>Lookup</type>
</CustomField>