force-app/main/default/objects/Position__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>