force-app/main/default/objects/Position__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>L1</fullName><default>false</default><label>L1</label></value>
            <value><fullName>L2</fullName><default>false</default><label>L2</label></value>
            <value><fullName>L3</fullName><default>false</default><label>L3</label></value>
            <value><fullName>L4</fullName><default>false</default><label>L4</label></value>
            <value><fullName>L5</fullName><default>false</default><label>L5</label></value>
            <value><fullName>L6</fullName><default>false</default><label>L6</label></value>
            <value><fullName>L7</fullName><default>false</default><label>L7</label></value>
            <value><fullName>L8</fullName><default>false</default><label>L8</label></value>
            <value><fullName>L9</fullName><default>false</default><label>L9</label></value>
            <value><fullName>L10</fullName><default>false</default><label>L10</label></value>
            <value><fullName>CFA</fullName><default>false</default><label>CFA</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>