force-app/main/default/objects/Position__c/fields/Parent_Position__c.field-meta.xml
<CustomField>
    <fullName>Parent_Position__c</fullName>
    <description>The position this one reports into. Drives the linked Role's parent (ParentRoleId).</description>
    <label>Parent Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Child Positions</relationshipLabel>
    <relationshipName>Child_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>