force-app/main/default/objects/Position__c/fields/Position_Code__c.field-meta.xml
<CustomField>
    <fullName>Position_Code__c</fullName>
    <description>Unique code for the position. Drives the linked Role DeveloperName (POS_&lt;code&gt;).</description>
    <externalId>true</externalId>
    <label>Position Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>