force-app/main/default/objects/Position__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <label>Reports To</label>
    <type>Lookup</type>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Child Positions</relationshipLabel>
    <relationshipName>Child_Positions</relationshipName>
</CustomField>