force-app/main/default/objects/Position__c/fields/Role_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Developer_Name__c</fullName>
    <description>Convention: developer name of the auto-created Salesforce Role linked to this position.</description>
    <formula>&quot;POS_&quot; &amp; UPPER(Position_Code__c)</formula>
    <label>Linked Role (Developer Name)</label>
    <type>Text</type>
</CustomField>