force-app/main/default/objects/Position__c/fields/Vacant_Position__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Position__c</fullName>
    <label>Vacant Position</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>