force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Position_Code__c</columns>
    <columns>Parent_Position__c</columns>
    <columns>Designation__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>